# Calculator-App

./: README.md  app.py  calc_app.py  pyproject.toml
calc_app/: app.py  core.py  evaluator.py  fractions.py  meme.py  parser.py  solver.py  wordproblem.py
calculator_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
seaus_calc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
