[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator-app"
version = "1.0.1"
description = "A natural-language, fraction-aware, meme-enabled calculator."
requires-python = ">=3.10"

[project.scripts]
calc-app = "calc_app.app:main"

[tool.setuptools]
packages = ["calc_app"]
