[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seaus-calc"
version = "1.0.2"
description = "A natural-language, fraction-aware, meme-enabled calculator."
requires-python = ">=3.10"
dependencies = ["setuptools"]

[project.scripts]
calc-app = "calc_app.app:main"

[tool.setuptools]
packages = ["calc_app"]
